Debut styles CSS page d'accueil

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section>
                 <i class="fas fa-map-marker-alt"></i>Paris, Belleville
             </section>
-            <section>
+            <section class="lightgray">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <a href="#restaurants">Explorer nos restaurants</a>
@@ -36,42 +36,70 @@
             </ol>
         </section>
         <!-- Restaurants list -->
-        <section id="restaurants">
+        <section id="restaurants" class="lightgray">
             <h2>Restaurants</h2>
             <nav>
-                <a href="menus/la-palette-du-gout.html">
-                    <article>
-                        <img src="images/restaurants/la-palette-du-gout.jpg" alt="La palette du goût">
-                        <em class="new"></em>
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <span class="like"><i class="fal fa-heart"></i><i class="fas fa-heart"></i></span>
-                    </article>
+                <a href="menus/la-palette-du-gout.html" class="card">
+                    <em class="new">Nouveau</em>
+                    <img src="images/restaurants/la-palette-du-gout.jpg" alt="La palette du goût">
+                    <div class="description">
+                        <div class="description-info">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div class="description-like">
+                            <span class="like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </span>
+                        </div>
+                    </div>
                 </a>
-                <a href="menus/la-note-enchantee.html">
-                    <article>
-                        <img src="images/restaurants/la-note-enchantee.jpg" alt="La note enchantée">
-                        <em class="new"></em>
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                        <span class="like"><i class="fal fa-heart"></i><i class="fas fa-heart"></i></span>
-                    </article>
+                <a href="menus/la-note-enchantee.html" class="card">
+                    <em class="new">Nouveau</em>
+                    <img src="images/restaurants/la-note-enchantee.jpg" alt="La note enchantée">
+                    <div class="description">
+                        <div class="description-info">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="description-like">
+                            <span class="like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </span>
+                        </div>
+                    </div>
                 </a>
-                <a href="menus/a-la-francaise.html">
-                    <article>
-                        <img src="images/restaurants/a-la-francaise.jpg" alt="À la française">
-                        <h3>À la française</h3>
-                        <p>Cité Rouge</p>
-                        <span class="like"><i class="fal fa-heart"></i><i class="fas fa-heart"></i></span>
-                    </article>
+                <a href="menus/a-la-francaise.html" class="card">
+                    <img src="images/restaurants/a-la-francaise.jpg" alt="À la française">
+                    <div class="description">
+                        <div class="description-info">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div class="description-like">
+                            <span class="like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </span>
+                        </div>
+                    </div>
                 </a>
-                <a href="menus/le-delice-des-sens.html">
-                    <article>
-                        <img src="images/restaurants/le-delice-des-sens.jpg" alt="Le délice des sens">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie-Méricourt</p>
-                        <span class="like"><i class="fal fa-heart"></i><i class="fas fa-heart"></i></span>
-                    </article>
+                <a href="menus/le-delice-des-sens.html" class="card">
+                    <img src="images/restaurants/le-delice-des-sens.jpg" alt="Le délice des sens">
+                    <div class="description">
+                        <div class="description-info">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="description-like">
+                            <span class="like">
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
+                            </span>
+                        </div>
+                    </div>
                 </a>
             </nav>
         </section>
