--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
     </main>
     <footer>
-        <h2>ohmyfood</h2>
+        <h2><a href="index.html">ohmyfood</a></h2>
         <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
