CSS Ajout de la partie localisation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Loading screen -->
         <!-- Localisation -->
         <nav>
-            <section>
+            <section class="gray">
                 <i class="fas fa-map-marker-alt"></i>Paris, Belleville
             </section>
             <section class="lightgray">
