CSS Ajout des CSS de la navigation vers les restaurants

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <section class="gray">
                 <i class="fas fa-map-marker-alt"></i>Paris, Belleville
             </section>
-            <section class="lightgray">
+            <section class="lightgray reservation">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <a href="#restaurants">Explorer nos restaurants</a>
+                <a href="#restaurants" class="button big">Explorer nos restaurants</a>
             </section>
         </nav>
         <!-- Tutorial -->
