--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <section class="grey">
                 <h2><i class="fas fa-map-marker-alt"></i>Paris, Belleville</h2>
             </section>
-            <section class="lightgrey reservation">
+            <section class="reservation">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <a href="#restaurants" class="button big">Explorer nos restaurants</a>
             </section>
         </nav>
         <!-- Tutorial -->
-        <section>
+        <section class="white">
             <h2>Fonctionnement</h2>
             <ol class="tuto-list">
                 <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
@@ -44,9 +44,9 @@
             </ol>
         </section>
         <!-- Restaurants list -->
-        <section id="restaurants" class="lightgrey">
+        <section id="restaurants">
             <h2>Restaurants</h2>
-            <nav>
+            <nav class="restaurants">
                 <div class="card">
                     <em class="new">Nouveau</em>
                     <img src="images/restaurants/la-palette-du-gout.jpg" alt="La palette du goût">
