Structure menus Mise en place du conteneur parent

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="../image/svg+xml" href="../images/logo/favicon.svg">
     <link rel="stylesheet" href="../css/main.min.css">
-    <title>Accueil</title>
+    <title>A la française</title>
 </head>
 
 <body>
@@ -20,6 +20,15 @@
     </header>
     <main class="menu-main">
         <img src="../images/restaurants/a-la-francaise.jpg" alt="A la française">
+        <form action="#" class="menu-form">
+            <h2>À la française</h2>
+            <div class="menu-like">
+                <span class="like">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i>
+                </span>
+            </div>
+        </form>
     </main>
     <footer>
         <h2><a href="index.html">ohmyfood</a></h2>
