--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -28,6 +28,10 @@
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
+            <h3>Entrées</h3>
+            <h3>Plats</h3>
+            <h3>Desserts</h3>
+            <input class="button big order" type="submit" value="Commander" />
         </form>
     </main>
     <footer>
