--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -14,7 +14,7 @@
         <a href="../index.html" class="back-btn">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../images/logo/logo.svg" alt="Logo ohmyfood">
         </a>
     </header>
@@ -28,14 +28,130 @@
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <h3>Entrées</h3>
-            <h3>Plats</h3>
-            <h3>Desserts</h3>
+            <nav class="menu-form__nav">
+                <div>
+                    <h3>Entrées</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Tartare de poulpe acidulé</h4>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div>
+                            <em>25€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Velouté de légumes d'antan</h4>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Soupe à l'oignon</h4>
+                            <p>Revisitée</p>
+                        </div>
+                        <div>
+                            <em>20€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Plats</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Coquilles Saint-Jacques</h4>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div>
+                            <em>40€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Magret de canard</h4>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div>
+                            <em>44€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Desserts</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Pétales de violettes glacés</h4>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div>
+                            <em>18€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Fondant au chocolat</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div>
+                            <em>22€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Millefeuille croustillant</h4>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div>
+                            <em>23€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+            </nav>
             <input class="button big order" type="submit" value="Commander" />
         </form>
     </main>
     <footer>
-        <h2><a href="index.html">ohmyfood</a></h2>
+        <h2><a href="../index.html">ohmyfood</a></h2>
         <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
