--- a/menus/la-note-enchantee.html
+++ b/menus/la-note-enchantee.html
@@ -14,7 +14,7 @@
         <a href="../index.html" class="back-btn">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../images/logo/logo.svg" alt="Logo ohmyfood">
         </a>
     </header>
@@ -28,14 +28,142 @@
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <h3>Entrées</h3>
-            <h3>Plats</h3>
-            <h3>Desserts</h3>
+            <nav class="menu-form__nav">
+                <div>
+                    <h3>Entrées</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Ravioles de foie gras</h4>
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div>
+                            <em>25€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Caviar osciètre</h4>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Homard et espuma de potiron</h4>
+                            <p>Mariné aux zestes d'orange</p>
+                        </div>
+                        <div>
+                            <em>20€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Foie gras de canard cuit entier</h4>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Plats</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Noix de coquilles Saint-Jacques</h4>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div>
+                            <em>40€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Langoustine poêlée</h4>
+                            <p>Purée de patate douce</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Mijoté de queue de boeuf </h4>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div>
+                            <em>44€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Desserts</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Macaron noisette et chocolat</h4>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div>
+                            <em>18€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Baba au rhum revisité</h4>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div>
+                            <em>22€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Tarte au citron meringuée</h4>
+                            <p>Déstructurée</p>
+                        </div>
+                        <div>
+                            <em>23€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+            </nav>
             <input class="button big order" type="submit" value="Commander" />
         </form>
     </main>
     <footer>
-        <h2><a href="index.html">ohmyfood</a></h2>
+        <h2><a href="../index.html">ohmyfood</a></h2>
         <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
