--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -14,7 +14,7 @@
         <a href="../index.html" class="back-btn">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../images/logo/logo.svg" alt="Logo ohmyfood">
         </a>
     </header>
@@ -28,14 +28,130 @@
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <h3>Entrées</h3>
-            <h3>Plats</h3>
-            <h3>Desserts</h3>
+
+            <nav class="menu-form__nav">
+                <div>
+                    <h3>Entrées</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Fricassée d'escargot</h4>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div>
+                            <em>25€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Foie gras de canard mi-cuit</h4>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Oeuf au plat</h4>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div>
+                            <em>20€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Plats</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Filet de boeuf aux herbes</h4>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div>
+                            <em>40€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Parmentier de queue de boeuf</h4>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Filet de turbot</h4>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div>
+                            <em>44€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Desserts</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Paris-Brest</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div>
+                            <em>18€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Macaron au chocolat d'exception</h4>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div>
+                            <em>22€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Mousse au chocolat</h4>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div>
+                            <em>23€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+            </nav>
             <input class="button big order" type="submit" value="Commander" />
         </form>
     </main>
     <footer>
-        <h2><a href="index.html">ohmyfood</a></h2>
+        <h2><a href="../index.html">ohmyfood</a></h2>
         <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
