--- a/menus/le-delice-des-sens.html
+++ b/menus/le-delice-des-sens.html
@@ -14,7 +14,7 @@
         <a href="../index.html" class="back-btn">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../images/logo/logo.svg" alt="Logo ohmyfood">
         </a>
     </header>
@@ -28,14 +28,130 @@
                     <i class="fas fa-heart"></i>
                 </span>
             </div>
-            <h3>Entrées</h3>
-            <h3>Plats</h3>
-            <h3>Desserts</h3>
+            <nav class="menu-form__nav">
+                <div>
+                    <h3>Entrées</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Tartare de thon</h4>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div>
+                            <em>25€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Bouchée de homard croustillant</h4>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Velouté de cèpes </h4>
+                            <p>Aux truffes</p>
+                        </div>
+                        <div>
+                            <em>20€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Plats</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Poulet rôti aux herbes de Provence</h4>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div>
+                            <em>40€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Langouste rôtie</h4>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div>
+                            <em>35€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Côte de boeuf Angus</h4>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div>
+                            <em>44€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+                <div>
+                    <h3>Desserts</h3>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Farandole de desserts</h4>
+                            <p>Du chef</p>
+                        </div>
+                        <div>
+                            <em>18€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Crème brulée</h4>
+                            <p>Revisitée</p>
+                        </div>
+                        <div>
+                            <em>22€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                    <span class="menu-item">
+                        <div>
+                            <h4>Tiramisu</h4>
+                            <p>À la noisette</p>
+                        </div>
+                        <div>
+                            <em>23€</em>
+                            <span class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </span>
+                        </div>
+                    </span>
+                </div>
+            </nav>
             <input class="button big order" type="submit" value="Commander" />
         </form>
     </main>
     <footer>
-        <h2><a href="index.html">ohmyfood</a></h2>
+        <h2><a href="../index.html">ohmyfood</a></h2>
         <ul>
             <li><a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a></li>
