Correction d'un problème sémentique div dans span

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <!-- Loading screen -->
-    <span class="loadingscreen">
+    <div class="loadingscreen">
         <div class="loader">
             <div></div>
             <div></div>
         </div>
-    </span>
+    </div>
     <header>
         <a href="index.html">
             <img src="images/logo/logo.svg" alt="Logo ohmyfood">
