Correction des erreurs du validateur pages de menu

--- a/menus/la-note-enchantee.html
+++ b/menus/la-note-enchantee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="../image/svg+xml" href="../images/logo/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../images/logo/favicon.svg">
     <link rel="stylesheet" href="../css/main.min.css">
     <title>La note enchantée</title>
 </head>
@@ -31,7 +31,7 @@
             <nav class="menu-form__nav">
                 <div>
                     <h3>Entrées</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Ravioles de foie gras</h4>
                             <p>Accompagnés de leur crème à la truffe</p>
@@ -42,8 +42,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Caviar osciètre</h4>
                             <p>Sur blini à la farine de blé noir</p>
@@ -54,8 +54,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Homard et espuma de potiron</h4>
                             <p>Mariné aux zestes d'orange</p>
@@ -66,8 +66,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Foie gras de canard cuit entier</h4>
                             <p>Confiture de figue et pain toasté</p>
@@ -78,11 +78,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Plats</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Noix de coquilles Saint-Jacques</h4>
                             <p>Sur lit de purée de céleri-rave</p>
@@ -93,8 +93,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Langoustine poêlée</h4>
                             <p>Purée de patate douce</p>
@@ -105,8 +105,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Mijoté de queue de boeuf </h4>
                             <p>Et riz sauvage aux zestes de citron</p>
@@ -117,11 +117,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Desserts</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Macaron noisette et chocolat</h4>
                             <p>Glace au caramel brun et sel de Guérande</p>
@@ -132,8 +132,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Baba au rhum revisité</h4>
                             <p>Avec son coulis de citron</p>
@@ -144,8 +144,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Tarte au citron meringuée</h4>
                             <p>Déstructurée</p>
@@ -156,7 +156,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
             </nav>
             <input class="button big order" type="submit" value="Commander" />
