--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="../image/svg+xml" href="../images/logo/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../images/logo/favicon.svg">
     <link rel="stylesheet" href="../css/main.min.css">
     <title>La palette du goût</title>
 </head>
@@ -32,7 +32,7 @@
             <nav class="menu-form__nav">
                 <div>
                     <h3>Entrées</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Fricassée d'escargot</h4>
                             <p>Au piment d'Espelette</p>
@@ -43,8 +43,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Foie gras de canard mi-cuit</h4>
                             <p>Et ses copeaux de truffe noire</p>
@@ -55,8 +55,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Oeuf au plat</h4>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -67,11 +67,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Plats</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Filet de boeuf aux herbes</h4>
                             <p>Accompagné de sa ribambelle de légumes</p>
@@ -82,8 +82,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Parmentier de queue de boeuf</h4>
                             <p>À la truffe noire sur sa purée de panais</p>
@@ -94,8 +94,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Filet de turbot</h4>
                             <p>Aux agrumes</p>
@@ -106,11 +106,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Desserts</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Paris-Brest</h4>
                             <p>Revisité</p>
@@ -121,8 +121,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Macaron au chocolat d'exception</h4>
                             <p>Et glace à la vanille de Madagascar</p>
@@ -133,8 +133,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Mousse au chocolat</h4>
                             <p>Au piment d'Espelette et à la truffe noire</p>
@@ -145,7 +145,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
             </nav>
             <input class="button big order" type="submit" value="Commander" />
         </form>
