--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="../image/svg+xml" href="../images/logo/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../images/logo/favicon.svg">
     <link rel="stylesheet" href="../css/main.min.css">
     <title>A la française</title>
 </head>
@@ -31,7 +31,7 @@
             <nav class="menu-form__nav">
                 <div>
                     <h3>Entrées</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Tartare de poulpe acidulé</h4>
                             <p>Aux zestes d'orange</p>
@@ -42,8 +42,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Velouté de légumes d'antan</h4>
                             <p>Carotte, panais, topinambour</p>
@@ -54,8 +54,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Soupe à l'oignon</h4>
                             <p>Revisitée</p>
@@ -66,11 +66,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Plats</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Coquilles Saint-Jacques</h4>
                             <p>Accompagnées d'une purée de panais</p>
@@ -81,8 +81,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Magret de canard</h4>
                             <p>Et parmentier de pommes de terre</p>
@@ -93,8 +93,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                             <p>Sur son lit de gnocchis aux légumes</p>
@@ -105,11 +105,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Desserts</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Pétales de violettes glacés</h4>
                             <p>Et purée de noisettes</p>
@@ -120,8 +120,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Fondant au chocolat</h4>
                             <p>Revisité</p>
@@ -132,8 +132,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Millefeuille croustillant</h4>
                             <p>Myrtilles et pâte d’amande</p>
@@ -144,7 +144,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
             </nav>
             <input class="button big order" type="submit" value="Commander" />
