--- a/menus/le-delice-des-sens.html
+++ b/menus/le-delice-des-sens.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="../image/svg+xml" href="../images/logo/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../images/logo/favicon.svg">
     <link rel="stylesheet" href="../css/main.min.css">
     <title>Le délice des sens</title>
 </head>
@@ -31,7 +31,7 @@
             <nav class="menu-form__nav">
                 <div>
                     <h3>Entrées</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Tartare de thon</h4>
                             <p>Assaisonné au yuzu</p>
@@ -42,8 +42,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Bouchée de homard croustillant</h4>
                             <p>Et sa farandole de petits légumes</p>
@@ -54,8 +54,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Velouté de cèpes </h4>
                             <p>Aux truffes</p>
@@ -66,11 +66,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Plats</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Poulet rôti aux herbes de Provence</h4>
                             <p>Et sa crème de truffe</p>
@@ -81,8 +81,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Langouste rôtie</h4>
                             <p>Et ses légumes de saison</p>
@@ -93,8 +93,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Côte de boeuf Angus</h4>
                             <p>Et sa purée de panais</p>
@@ -105,11 +105,11 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
                 <div>
                     <h3>Desserts</h3>
-                    <span class="menu-item">
+                    <div class="menu-item">
                         <div>
                             <h4>Farandole de desserts</h4>
                             <p>Du chef</p>
@@ -120,8 +120,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Crème brulée</h4>
                             <p>Revisitée</p>
@@ -132,8 +132,8 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
-                    <span class="menu-item">
+                    </div>
+                    <div class="menu-item">
                         <div>
                             <h4>Tiramisu</h4>
                             <p>À la noisette</p>
@@ -144,7 +144,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </span>
                         </div>
-                    </span>
+                    </div>
                 </div>
             </nav>
             <input class="button big order" type="submit" value="Commander" />
