--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -146,6 +146,7 @@
                             </span>
                         </div>
                     </div>
+                </div>
             </nav>
             <input class="button big order" type="submit" value="Commander" />
         </form>
