--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
     <!--  HEADER  -->
   <header class="header">
-    <h1 class="header__logo">ohmyfood</h1>
+    <h1 class="header__logo">
+      <img src="img/logo/logo.svg" alt="Logo ohmyfood">
+
+    </h1>
 
     <!--  LOCAL  -->
     <section class="local">
@@ -156,7 +159,7 @@
           <a class="footer__link" href="#">Mentions légales</a>
         </li>
         <li class="footer__listElt">
-          <a class="footer__link" href="">Contact</a>
+          <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
         </li>
       </ul>
     </div>
