--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -14,7 +14,9 @@
   <header class="header header--withBackArrow">
     <div class="restaurantContainer">
       <a href="../index.html"><i class="fas fa-arrow-left header__arrow"></i></a>
-      <h1 class="header__logo">ohmyfood</h1>
+      <h1 class="header__logo">
+        <img src="img/logo/logo.svg" alt="Logo ohmyfood">
+      </h1>
     </div>
   </header>
 
