--- a/menus/la-note-enchantee.html
+++ b/menus/la-note-enchantee.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../Public/css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
   <link href='https://fonts.googleapis.com/css?family=Shrikhand' rel='stylesheet'>
   <title>Restaurant "La note enchantée" - ohmyfood!</title>
   <meta name="title" content='Restaurant "La note enchantée" - ohmyfood!'>
