--- a/menus/le-delice-des-sens.html
+++ b/menus/le-delice-des-sens.html
@@ -16,12 +16,12 @@
     <div class="restaurantContainer">
       <a href="../index.html"><i class="fas fa-arrow-left header__arrow"></i></a>
       <h1 class="header__logo">
-        <img src="img/logo/logo.svg" alt="Logo ohmyfood">
+        <img src="../images/logo/logo.svg" alt="Logo ohmyfood">
       </h1>
     </div>
   </header>
 
-  <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="heroImg">
+  <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="heroImg">
 
   <main class="menu container">
     <header class="menu__header">
