--- a/menus/la-note-enchantee.html
+++ b/menus/la-note-enchantee.html
@@ -18,12 +18,12 @@
     <div class="restaurantContainer">
       <a href="../index.html"><i class="fas fa-arrow-left header__arrow"></i></a>
       <h1 class="header__logo">
-        <img src="img/logo/logo.svg" alt="Logo ohmyfood">
+        <img src="../images/logo/logo.svg" alt="Logo ohmyfood">
       </h1>
     </div>
   </header>
 
-  <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="heroImg">
+  <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="heroImg">
 
   <main class="menu container">
     <header class="menu__header">
